# machineturing_qt

./: CMakeLists.txt  machineturing.h  mainwindow.cpp  mainwindow.ui
